# python_package

./: .env  .gitignore  .pre-commit-config.yaml  DockerfileDb  DockerfileServer  Makefile  README.md  docker-compose.yml  factory_testdata.py  init.sql  main.py  postgresql.conf  pyproject.toml
compose/db/: Dockerfile  init.sql
compose/server/: DockerfileServer
src/: api_utils.py  app.py  config.py
src/api/v1/: endpoints.py
src/api/v1/endpoints/: course_endpoints.py  groups_endpoints.py  students_endpoints.py
src/cli/: cli_commands.py
src/db/: __init__.py
src/db/models/: course_model.py  group_model.py  student_course_relation.py  student_course_relation_model.py  student_model.py
src/db/repository/: base_repository.py  course_repository.py  groups_repository.py  students_repository.py
src/schemas/: cource_schemas.py  group_schemas.py  student_schemas.py
